# datachain

./: LICENSE  README.md
.github/workflows/: test.yml
backend/: pyproject.toml  sqlchain.py
backend/tests/: sqlchain_test.py
datachain-backend/: pyproject.toml
datachain-backend/datachain_backend/: backend_checker.py  openai_loader.py  sqlchain.py
datachain-backend/datachain_backend/utils/: settings.py
datachain-backend/tests/: test_sqlchain.py
datachain-frontend/: manage.py  pyproject.toml
datachain-frontend/chatbot_frontend/: asgi.py  settings.py  urls.py  wsgi.py
datachain-frontend/chatbot_ui/: apps.py  forms.py  urls.py  views.py
datachain-frontend/chatbot_ui/static/css/: query_page.css  style.css
datachain-frontend/chatbot_ui/static/js/: chat.js
datachain-frontend/chatbot_ui/templates/chatbot_ui/: base.html  database_tables.html  index.html  query_page.html  view_table.html
