[tool.poetry]
name = "backend-datachain"
version = "0.1.0"
description = "Backend for Datachain. Nested RAG using Langchain"
authors = ["Charles Calapini"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.341"
langchain-experimental = "^0.0.42"
openai = "^1.3.5"
pyscopg2 = "^66.0.2"
poetry-dotenv = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
